--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
