--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "better-scroll": "^2.0.6",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "mint-ui": "^2.2.13",
